tests/invalid/magicbox.err_exp
magicbox.m:038: In `arguments_handler'(di, uo, out):
magicbox.m:038:   error: determinism declaration not satisfied.
magicbox.m:038:   Declared [38;5;40m`cc_multi',[39;49m inferred [38;5;203m`cc_nondet'.[39;49m
magicbox.m:038:   The reasons for the difference are the following.
magicbox.m:055:   [38;5;226mCall to `string.to_int'(in, out) can fail.[39;49m
magicbox.m:061:   [38;5;226mCall to `string.to_int'(in, out) can fail.[39;49m
